2005-10-16 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/iom165.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : Change "SFR_I08()" on "_SFR_I08()".
	* include/avr/iom325.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom329.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom645.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom649.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom3250.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom3290.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom6450.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom6490.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iomxx4.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	MONDR, OCDR) : (Ditto.).
	* include/avr/iomxx0_1.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	MONDR, OCDR) : (Ditto.).
	[Fixed bug #14798]

2005-10-12 Anatoly Sokolov <aesok@pautinka.net>

	* libc/misc/itoa.S: Make labels local, add Id line.
	* libc/misc/ltoa.S: (Ditto.)
	* libc/misc/ultoa.S: (Ditto.)
	* libc/misc/utoa.S: (Ditto.)

2005-10-10 Anatoly Sokolov <aesok@pautinka.net>

	(Idea by Dmitry K. <dmixm at marine dot febras dot ru>)
	* common/macros.inc (X_movw) : New version. Can use register names 
	as arguments.

2005-10-06 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/boot.h (__boot_page_fill_normal, 
	__boot_page_fill_alternate, __boot_page_erase_normal, 
	__boot_page_erase_alternate,  __boot_page_write_normal,
	__boot_page_write_alternate, __boot_rww_enable, 
	__boot_rww_enable_alternate, __boot_lock_bits_set,
	__boot_lock_bits_set_alternate, boot_lock_fuse_bits_get): Change type
	of __SPM_REG operand on input, immediate.	
	(__boot_page_fill_extended, __boot_page_erase_extended, 
	__boot_page_write_extended) : Change type of __SPM_REG and RAMPZ 