@@ -43,6 +43,7 @@
   [#12495] about Busy-wait delay loops(document)
   [#12496] about set_sleep_mode() and tiny26/tiny2313
   [#12735] No support for AT94K devices in sleep.h
+  [#12739] Gcc assumes that target libc provides ffs function
   [#12775] Possible Bug in sscanf on string end
   [#13557] small typo in avr-libc-user-manual-1.2.3
   [#14224] _delay_ms() not inlining if called more than once in a unit
@@ -82,6 +83,11 @@
     . ATmega164/324/644
     . ATmega640/1280/1281
 
+* New string functions. Contributed by Dmitry Xmelkov.
+
+  ffs
+  ffsl
+  ffsll
 
 *** Changes since avr-libc-1.2.4:
 
